--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>رمضان كريم</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
 </head>
 <body>
     <header>
@@ -19,14 +20,8 @@
     </header>
 
     <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h1>رمضان كريم</h1>
-                <p>شهادة تقدير لأطفالك لصيامهم شهر رمضان المبارك</p>
-                <a href="#generator" class="cta-button">ابدأ الآن</a>
-            </div>
-        </section>
-
+        <!-- Hero section removed as requested -->
+        
         <section id="generator" class="generator-section">
             <div class="container">
                 <div class="form-container">
@@ -109,6 +104,7 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
